# publipostage_doeth

./: .gitignore  README.md  analyse_nb.ipynb  build_app.py  gui.py  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/backup/: 100_Attestation DOETH_2024_LES MOUSQUETAIRES.docx  101_Attestation DOETH_2024_QUEGUINER.docx  102_Attestation DOETH_2024_MERCURIAL .docx  103_Attestation DOETH_2024_MERCURIAL .docx  104_Attestation DOETH_2024_BCM COSMETIQUE.docx  105_Attestation DOETH_2024_AVRIL.docx  106_Attestation DOETH_2024_LAGADEC.docx  107_Attestation DOETH_2024_FRONERI.docx  108_Attestation DOETH_2024_CALCIA.docx  109_Attestation DOETH_2024_VINCI.docx  10_Attestation DOETH_2024_AGRIAL.docx  110_Attestation DOETH_2024_MTA.docx  111_Attestation DOETH_2024_PIZZORNO.docx  112_Attestation DOETH_2024_GROUP ROCHER.docx  113_Attestation DOETH_2024_GROUP ROCHER.docx  114_Attestation DOETH_2024_GROUP ROCHER.docx  115_Attestation DOETH_2024_GROUP ROCHER.docx  116_Attestation DOETH_2024_GROUP ROCHER.docx  117_Attestation DOETH_2024_DAYACK REFERAL.docx  118_Attestation DOETH_2024_EFINOR.docx  119_Attestation DOETH_2024_STG.docx  11_Attestation DOETH_2024_AGRIAL.docx  120_Attestation DOETH_2024_COOPERL.docx  121_Attestation DOETH_2024_SOFIKIG.docx  122_Attestation DOETH_2024_LES MOUSQUETAIRES.docx  123_Attestation DOETH_2024_LES MOUSQUETAIRES.docx  124_Attestation DOETH_2024_COMPASS.docx  125_Attestation DOETH_2024_GFS.docx  126_Attestation DOETH_2024_LES MOUSQUETAIRES.docx  127_Attestation DOETH_2024_LES MOUSQUETAIRES.docx  128_Attestation DOETH_2024_MERCURIAL .docx  129_Attestation DOETH_2024_TRANSDEV.docx  12_Attestation DOETH_2024_GUISNEL.docx  130_Attestation DOETH_2024_MAILLARD GROUPE.docx  131_Attestation DOETH_2024_LES MOUSQUETAIRES.docx  132_Attestation DOETH_2024_AALBERTS.docx  133_Attestation DOETH_2024_QUEGUINER.docx  134_Attestation DOETH_2024_VIVESCIA.docx  135_Attestation DOETH_2024_VANDEMOORTELE.docx  136_Attestation DOETH_2024_VANDEMOORTELE.docx  (+221 more)
src/: data_processor.py  document_generator.py  pdf_converter.py
src/utils/: config.py  error_handling.py  logger.py
