[tool.poetry]
name = "publipostage-doeth"
version = "0.1.0"
description = "Génération d'attestations DOETH à partir de fichiers Excel"
authors = ["Votre Nom <votre.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
python-docx = "^0.8.11"
pyyaml = "^6.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
publipostage = "publipostage_doeth.main:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
